--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,8 @@ jobs:
       - name: Generate Javadocs with Gradle
         run: ./gradlew javadoc
 
-      - name: Deploy Javadocs
-        if: ${{ github.event_name == 'push' && github.repository == 'Lorenzo0111/RocketPlaceholders' }}
-        uses: netlify/actions/cli@master
+      - name: Archive plugin jars on GitHub
+        uses: actions/upload-artifact@v4
         with:
-          args: deploy --dir=build/docs/javadoc --prod --message="GitHubActionsDeploy"
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          name: Plugin
+          path: build/libs
